# uncross

./: .gitignore  LICENSE.txt  README.md  build_site.sh  pyproject.toml
book/src/: SUMMARY.md  commands.md  introduction.md  quick_start.md
book/src/commands/: build.md  check.md  clean.md  fmt.md  lint.md  new.md  release.md
site/: download.html  index.html  styles.css
src/uncross/: __about__.py  __main__.py  build_params.py  exceptions.py  invoke.py  logger.py  toolchains.py
src/uncross/cli/: __init__.py
src/uncross/cli/uncross/: build.py  check.py  clean.py  fmt.py  group.py  lint.py  new.py  release.py
src/uncross/cli/uncross/autocompletion/: bash.py  fish.py  group.py  zsh.py
src/uncross/cli/uncross/config/: group.py  list.py
src/uncross/cli/uncross/project/: group.py
src/uncross/cli/uncross/project/config/: group.py  list.py
src/uncross/cli/uncross/toolchain/: group.py  list.py
src/uncross/cli/uncross/toolchain/download/: bootlin.py  group.py
src/uncross/cli/uncross/toolchain/register/: bootlin.py  group.py
src/uncross/commands/: build.py  check.py  clean.py  download.py  fmt.py  lint.py  new.py  release.py
src/uncross/config/project/: commit.py  parse.py
src/uncross/config/tool/: parse.py
src/uncross/git/: repo.py
src/uncross/network/: download.py
src/uncross/programs/: clang_format.py  clang_tidy.py  cmake.py  code_checker.py
src/uncross/project/: create.py
src/uncross/project/artifacts/: c_proj.py  clang_format.py  clang_tidy.py  cmake.py  git_ignore.py  gitignore.py  makefile.py  uncross.py
src/uncross/task/: base_pipeline.py  series_pipeline.py  task.py
src/uncross/testing/: project.py  run.py
tests/: __init__.py  test_basic.py  test_bootlin.py  test_check.py  test_lint_fmt.py
