[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uncross"
dynamic = ["version"]
description = 'An opinionated meta build system for C cross-compilation.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "William Born", email = "william.born.git@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "auto-click-auto",
  "click",
  "prompt_toolkit",
  "gitpython",
  "codechecker",
  "colorama",
  "requests",
  "rich",
  "setuptools",
  "toml"
]

[project.optional-dependencies]
tools = [
  "cmake",
  "clang-tidy",
  "clang-format",
]

[project.urls]
Documentation = "https://github.com/williamkborn/uncross#readme"
Issues = "https://github.com/williamkborn/uncross/issues"
Source = "https://github.com/williamkborn/uncross"

[project.scripts]
uncross = "uncross.cli:main"

[tool.hatch.version]
path = "src/uncross/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pylint",
  "yapf",
  "setuptools",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/uncross tests}"

[tool.coverage.run]
source_pkgs = ["uncross", "tests"]
branch = true
parallel = true
omit = [
  "src/uncross/__about__.py",
]

[tool.coverage.paths]
uncross = ["src/uncross", "*/uncross/src/uncross"]
tests = ["tests", "*/uncross/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
ignore = [
  "FBT001",
  "FBT002",
  "TRY400",
  "S101",
]

[tool.pylint]
disable = [
  "too-many-arguments",
  "redefined-outer-name",
]
